--- a/views/src/main/res/drawable/jm_dialog_button_right_selector.xml
+++ b/views/src/main/res/drawable/jm_dialog_button_right_selector.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!--点击效果-->
     <item android:state_pressed="true">
-        <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+        <shape>
             <!-- android:radius 弧形的半径 -->
             <solid android:color="#EAEAEA"/>
             <corners android:bottomRightRadius="5dp"/>
