--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,11 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/theme_color</item>
-        <item name="colorPrimaryDark">@color/theme_color</item>
-        <item name="colorAccent">@color/theme_color</item>
+    <style name="AppTheme" parent="Theme.Design.Light.NoActionBar">
+        <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
+    <style name="SplashTheme" parent="@style/AppTheme">
+        <item name="android:windowBackground">@mipmap/splash</item>
+    </style>
 </resources>
