--- a/app/src/main/res/layout/splash_activity.xml
+++ b/app/src/main/res/layout/splash_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,9 +10,35 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop" />
 
-    <TextView
-        android:id="@+id/txt_splash"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp" />
+    <RelativeLayout
+        android:id="@+id/rl_jump_main_ac"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="60dp"
+        android:layout_marginRight="30dp">
+
+        <com.hcan53.android.views.progress.RoundProgressBar
+            android:id="@+id/rpb_go_next"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerInParent="true"
+            app:circleColor="#C6C6C6"
+            app:countDownInterval="50"
+            app:millisInFuture="5000"
+            app:radiuss="16dp"
+            app:ringColor="#DD191D"
+            app:roundColor="@android:color/white"
+            app:strokeWidths="1dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:text="跳过"
+            android:textColor="@android:color/white"
+            android:textSize="10.0sp" />
+    </RelativeLayout>
+
 </RelativeLayout>
