--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="theme_color">#95CB5B</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
