--- a/views/src/main/res/layout/jm_bottom_sheet_item.xml
+++ b/views/src/main/res/layout/jm_bottom_sheet_item.xml
@@ -4,7 +4,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
-    <com.hcan53.android.views.roundwidget.JmRoundTextView
+    <com.hcan53.android.views.round.JmRoundTextView
         android:id="@+id/bottom_sheet_item_tv"
         android:layout_width="match_parent"
         android:layout_height="48dp"
