--- a/views/src/main/res/layout/jm_bottom_sheet_item_bottom.xml
+++ b/views/src/main/res/layout/jm_bottom_sheet_item_bottom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.hcan53.android.views.roundwidget.JmRoundTextView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.hcan53.android.views.round.JmRoundTextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/bottom_sheet_item_tv"
     android:layout_width="match_parent"
