--- a/views/src/main/res/layout/jm_captcha_dialog.xml
+++ b/views/src/main/res/layout/jm_captcha_dialog.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.hcan53.android.views.roundwidget.JmRoundLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.hcan53.android.views.round.JmRoundLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -90,4 +90,4 @@
 
     </LinearLayout>
 
-</com.hcan53.android.views.roundwidget.JmRoundLinearLayout>
+</com.hcan53.android.views.round.JmRoundLinearLayout>
