--- a/views/src/main/res/layout/jm_wheel_dialog.xml
+++ b/views/src/main/res/layout/jm_wheel_dialog.xml
@@ -52,7 +52,7 @@
         android:layout_height="0.5dp"
         android:background="#999999" />
 
-    <com.contrarywind.view.WheelView
+    <com.hcan53.android.views.wheelview.view.WheelView
         android:id="@+id/options"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
